--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ img {
 
 /*************** Generel *********************/
 
+main {
+  max-width: 1200px;
+  margin: 0 auto;
+  min-height: 90vh;
+}
+
 /*************** Header *********************/
 
 header {
