--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
   --nav: #fddcd2;
   --box: #f9dce7;
   --white: #fff;
+
+  --ff-lobster: "Lobster", cursive;
+  --ff-text: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 /*************** Reset *********************/
@@ -43,7 +46,7 @@ header {
   align-items: center;
 }
 
-a {
+header a {
   text-decoration: none;
   color: var(--primary);
 }
@@ -71,6 +74,7 @@ section {
 }
 
 h1 {
+  font-weight: 400;
   font-family: "Lobster", cursive;
   font-size: 4rem;
   color: var(--white);
