--- a/categories.css
+++ b/categories.css
@@ -15,6 +15,9 @@ h1 {
   text-align: center;
   margin-top: 1rem;
 }
+main a {
+  text-decoration: none;
+}
 .grid_1-1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
