--- a/form.css
+++ b/form.css
@@ -4,9 +4,10 @@ main {
 
 form {
   margin: 2rem 4rem;
-  padding: 2rem 6rem;
+  padding: 2rem 20rem 2rem 10rem;
   display: grid;
   grid-template-columns: 1fr 4fr;
+  column-gap: 1rem;
   row-gap: 1rem;
   /* flex-direction: column; */
   background-color: var(--box);
@@ -27,6 +28,82 @@ label {
   font-size: 0.8rem;
   color: var(--secondary);
 }
-placeholder {
+button {
   font-family: var(--ff-text);
+  color: var(--white);
+  font-size: 1.2rem;
+  font-weight: bold;
+  background: var(--baggrund);
+  border: none;
+  border-radius: 20px;
+  padding: 0.5rem 1rem;
+  margin-top: 1rem;
+}
+button:hover {
+  background: var(--knap);
+  cursor: pointer;
+}
+button:active {
+  color: var(--primary);
+}
+
+input[type="checkbox"] {
+  justify-self: start;
+}
+input[type="checkbox"] {
+  position: relative;
+  cursor: pointer;
+}
+input[type="checkbox"]:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 0;
+  left: 0;
+  /* border: 2px solid #555555; */
+  border-radius: 3px;
+  background-color: white;
+}
+input[type="checkbox"]:checked:after {
+  content: "";
+  display: block;
+  width: 5px;
+  height: 10px;
+  border: solid black;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  position: absolute;
+  top: 2px;
+  left: 8px;
+}
+input[type="date"] {
+  width: fit-content;
+}
+select[name="category"] {
+  width: fit-content;
+}
+::placeholder {
+  font-family: var(--ff-text);
+  color: var(--secondary);
+}
+
+textarea:focus-visible {
+  outline: none;
+}
+select[name="category"]:focus-visible {
+  outline: none;
+}
+input[type="date"]:focus-visible {
+  outline: none;
+}
+
+input[type="date"] {
+  color: var(--secondary);
+}
+select[name="category"] {
+  color: var(--secondary);
 }
