--- a/form.css
+++ b/form.css
@@ -4,7 +4,7 @@ main {
 
 form {
   margin: 2rem 4rem;
-  padding: 2rem 20rem 2rem 10rem;
+  padding: 2rem 18rem 2rem 10rem;
   display: grid;
   grid-template-columns: 1fr 4fr;
   column-gap: 1rem;
@@ -12,6 +12,10 @@ form {
   /* flex-direction: column; */
   background-color: var(--box);
   border-radius: 30px;
+}
+form label {
+  justify-self: end;
+  align-self: center;
 }
 
 input,
@@ -71,7 +75,7 @@ input[type="checkbox"]:checked:after {
   display: block;
   width: 5px;
   height: 10px;
-  border: solid black;
+  border: solid var(--primary);
   border-width: 0 2px 2px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
@@ -94,12 +98,13 @@ select[name="category"] {
 textarea:focus-visible {
   outline: none;
 }
-select[name="category"]:focus-visible {
+:focus-visible {
   outline: none;
 }
+/* select[name="category"],
 input[type="date"]:focus-visible {
   outline: none;
-}
+} */
 
 input[type="date"] {
   color: var(--secondary);
