--- a/form.css
+++ b/form.css
@@ -3,16 +3,26 @@ main {
 }
 
 form {
-  margin: 2rem 4rem;
-  padding: 2rem 18rem 2rem 10rem;
+  margin: 1rem 4rem;
+  padding: 2rem;
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr 45% 1fr;
   column-gap: 1rem;
   row-gap: 1rem;
   /* flex-direction: column; */
   background-color: var(--box);
   border-radius: 30px;
 }
+form :nth-child(2n + 1) {
+  grid-column-start: 1;
+}
+form :last-child {
+  grid-column-start: 2;
+  width: fit-content;
+  justify-self: center;
+  padding: 0.5rem 1.5rem;
+}
+
 form label {
   justify-self: end;
   align-self: center;
@@ -40,7 +50,6 @@ button {
   background: var(--baggrund);
   border: none;
   border-radius: 20px;
-  padding: 0.5rem 1rem;
   margin-top: 1rem;
 }
 button:hover {
@@ -111,4 +120,33 @@ input[type="date"] {
 }
 select[name="category"] {
   color: var(--secondary);
+}
+
+@media (max-width: 550px) {
+  h1 {
+    font-size: 3rem;
+  }
+  form {
+    grid-template-columns: 1fr 4fr;
+    margin: 1rem 0.5rem;
+    padding: 1rem 0.5rem;
+  }
+  .logo {
+    font-size: 2.5rem;
+  }
+  .nav_button {
+    font-size: 0.5rem;
+    padding: 0.3rem 0.5rem;
+  }
+}
+@media (max-width: 350px) {
+  form label,
+  form input,
+  textarea,
+  select {
+    font-size: 0.6rem;
+  }
+  h1 {
+    font-size: 2rem;
+  }
 }
