--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ header a {
   font-family: "Lobster", cursive;
 }
 
-.nav_button {
+.nav_button a {
   font-size: 0.9rem;
   border: var(--primary) 2px solid;
   border-radius: 30px;
