--- a/product.css
+++ b/product.css
@@ -1,29 +1,16 @@
 /*************** Product *********************/
 
-h1 {
-  font-family: "Lobster", cursive;
-  font-size: 4rem;
-  color: white;
-  text-align: center;
-  padding: 10px 0px;
-}
-
 h3,
 .paymentreq {
   color: #d58b8b;
   font-size: 1.5rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 p {
   color: #950404;
   line-height: 1.6;
-}
-
-.box {
-  background-color: #f9dce7;
-  margin: 0px 110px;
-  padding: 50px;
-  border-radius: 70px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .website_button {
