--- a/style.css
+++ b/style.css
@@ -64,14 +64,24 @@ a {
 
 /*************** Box *********************/
 
-section {
+main {
   background-color: var(--baggrund);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
   padding: 10px 0px 30px 0px;
 }
 
-h1 {
+.box {
+  background-color: #f9dce7;
+  margin: 0px 110px;
+  padding: 50px;
+  border-radius: 70px;
+}
+
+h1,
+h2 {
   font-family: "Lobster", cursive;
+}
+
+h1 {
   font-size: 4rem;
   color: var(--white);
   text-align: center;
