--- a/productlist.css
+++ b/productlist.css
@@ -76,7 +76,7 @@ button {
   display: none;
 }
 
-/***** stort format *******/
+/***** web format *******/
 
 @media (min-width: 690px) {
   .box {
@@ -102,8 +102,83 @@ button {
     margin: 50px 8px 10px 8px;
   }
 }
+/****** check-box *********/
 
-.radio-box {
+.checkbox-box {
   display: flex;
-  background-color: var(--box);
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.checkbox-box label {
+  display: inline-block;
+  background-color: var(--white);
+  border-radius: 20px;
+  padding: 10px;
+  margin: 5px;
+  text-align: center;
+
+  font-family: var(--ff-text);
+  font-size: small;
+  color: var(--secondary);
+}
+
+.checkbox-box input[type="checkbox"] {
+  display: none;
+}
+
+.checkbox-box input[type="checkbox"] + label:before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  background-color: var(--white);
+}
+
+.checkbox-box input[type="checkbox"]:checked + label:before {
+  content: "\2713";
+  color: var(--secondary);
+  font-size: 16px;
+  line-height: 20px;
+}
+
+/****** hjerte *****/
+
+.heart-container {
+  width: 6%;
+  position: absolute;
+  aspect-ratio: 23/20;
+  top: 17%;
+  left: 5%;
+}
+.heart-sprite {
+  width: 100%;
+  height: 100%;
+  background-image: url(/img/heart1.svg);
+  background-size: 100%;
+}
+
+/*** bevægelse ****/
+
+.move {
+  animation-name: move_kf;
+  animation-duration: 2.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes move_kf {
+  from {
+    left: 2vw;
+    bottom: 60vw;
+  }
+
+  to {
+    left: 2vw;
+    top: 60vw;
+  }
 }
