--- a/productlist.css
+++ b/productlist.css
@@ -62,7 +62,9 @@ img {
   box-shadow: 2px 2px 5px rgb(104 37 37);
 }
 
-button {
+.knap {
+  text-decoration: none;
+  font-family: var(--ff-text);
   font-size: large;
   color: var(--white);
   background-color: var(--knap);
