--- a/product.css
+++ b/product.css
@@ -31,6 +31,15 @@ main {
   font-size: 2rem;
 }
 
+.banner {
+  color: var(--white);
+  position: absolute;
+  font-size: 1.7rem;
+  margin-top: 5rem;
+  background-color: var(--primary);
+  padding: 15px 30px;
+}
+
 /*************** Button *********************/
 
 .website_button a {
