--- a/productlist.css
+++ b/productlist.css
@@ -18,6 +18,7 @@ h1 {
   text-align: center;
   padding: 10px 0px;
 }
+
 h2 {
   font-family: var(--ff-lobster);
   color: var(--primary);
@@ -27,6 +28,7 @@ h2 {
 h3 {
   font-family: var(--ff-lobster);
   color: var(--secondary);
+  font-size: 1.4rem;
 }
 
 main {
@@ -40,13 +42,13 @@ main {
   padding-inline: 2.2rem;
   padding-block: 3rem;
   border-radius: 70px;
+  position: relative;
 }
 
 .free {
   font-family: var(--ff-text);
   color: var(--knap);
   position: absolute;
-  margin-top: 20px;
   background-color: var(--white);
   padding: 3px 15px 3px 15px;
   box-shadow: 2px 2px 5px rgb(104 37 37);
@@ -71,7 +73,20 @@ main {
 
 .anbefalet {
   position: absolute;
+  color: white;
+  z-index: 2;
+  right: 40%;
+  top: -6%;
+  padding: 5px;
+  padding-block: 10;
+  background-color: var(--primary);
+  border-radius: 15px;
+  text-align: center;
+  font-family: var(--ff-text);
+  box-shadow: 0px 2px 5px black;
 }
+
+*/
 
 /******* add class *********/
 
@@ -111,6 +126,10 @@ main {
     height: 175px;
     width: 175px;
     object-fit: cover;
+  }
+
+  .free {
+    top: 25%;
   }
 
   /**************************************/
