--- a/productlist.css
+++ b/productlist.css
@@ -26,7 +26,7 @@ h2 {
 }
 
 h3 {
-  font-family: var(--ff-lobster);
+  font-family: var(--ff-text);
   color: var(--secondary);
   font-size: 1.4rem;
 }
