--- a/productlist.css
+++ b/productlist.css
@@ -75,7 +75,6 @@ main {
   position: absolute;
   color: white;
   z-index: 2;
-  right: 40%;
   top: -6%;
   padding: 5px;
   padding-block: 10;
@@ -84,6 +83,7 @@ main {
   text-align: center;
   font-family: var(--ff-text);
   box-shadow: 0px 2px 5px black;
+  justify-self: center;
 }
 
 */
