--- a/product.css
+++ b/product.css
@@ -62,6 +62,7 @@ main {
     grid-template-columns: 1.3fr 1fr;
     margin-top: 35px;
     column-gap: 50px;
+    row-gap: 10px;
   }
 
   .website_button a {
