--- a/product.css
+++ b/product.css
@@ -11,7 +11,6 @@ main {
   padding: 10px 0px 30px 0px;
 }
 /*************** Color *********************/
-
 .primary {
   color: var(--primary);
 }
@@ -21,30 +20,41 @@ main {
 }
 
 /*************** Box *********************/
+.box {
+  position: relative;
+}
 
 .right {
   text-align: right;
 }
+section {
+  position: relative;
+}
 
 .celebritiesOnSite {
-  position: relative;
+  position: absolute;
   color: var(--white);
   background-color: var(--primary);
   z-index: 1;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  top: 12%;
+  padding: 0.8rem 1.5rem;
+  box-shadow: 1px 2px 6px black;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .banner {
   color: var(--white);
   position: absolute;
-  font-size: 1.7rem;
-  margin-top: 5rem;
   background-color: var(--primary);
-  padding: 15px 30px;
 }
 
 /*************** Button *********************/
 
+.website_button {
+  margin-top: 1.5rem;
+}
 .website_button a {
   background-color: var(--baggrund);
   color: var(--white);
@@ -98,7 +108,25 @@ main {
 
 @media (max-width: 689px) {
   .box {
+    display: grid;
     margin: 50px 8px 10px 8px;
+  }
+  .celebritiesOnSite {
+    font-size: 1rem;
+    top: 0;
+    justify-self: center;
+    padding: 0.6rem 1rem;
+    box-shadow: 0px 2px 6px black;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+  }
+  h3 {
+    margin-bottom: 0.5rem;
+  }
+  .website_button {
+    margin-top: 2.5rem;
+    justify-self: center;
   }
 }
 
@@ -115,9 +143,30 @@ main {
     font-size: 0.5rem;
     padding: 0.3rem 0.5rem;
   }
-
+  .box {
+    display: grid;
+    padding: 3rem;
+  }
   .website_button a {
+    font-size: 1.2rem;
+    padding: 0.8rem 1.5rem;
+  }
+  .celebritiesOnSite {
     font-size: 1rem;
+    top: 0;
+    justify-self: center;
+    padding: 0.6rem 1rem;
+    box-shadow: 0px 2px 6px black;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+  }
+  h3 {
+    margin-bottom: 0.5rem;
+  }
+  .website_button {
+    margin-top: 2.5rem;
+    justify-self: center;
   }
 }
 .hidden {
