--- a/productlist.css
+++ b/productlist.css
@@ -43,6 +43,7 @@ main {
   padding-block: 3rem;
   border-radius: 70px;
   position: relative;
+  display: grid;
 }
 
 .free {
@@ -75,15 +76,15 @@ main {
   position: absolute;
   color: white;
   z-index: 2;
-  right: 40%;
   top: -6%;
-  padding: 5px;
-  padding-block: 10;
+  padding-block: 6px;
+  padding-inline: 12px;
   background-color: var(--primary);
   border-radius: 15px;
   text-align: center;
   font-family: var(--ff-text);
   box-shadow: 0px 2px 5px black;
+  justify-self: center;
 }
 
 /******* add class *********/
@@ -100,6 +101,12 @@ main {
   }
   .indhold a {
     margin-top: 2rem;
+  }
+  .anbefalet {
+    top: -3%;
+  }
+  .free {
+    top: 15%;
   }
 }
 
