--- a/product.css
+++ b/product.css
@@ -173,3 +173,32 @@ section {
 .hidden {
   display: none;
 }
+@media (max-width: 445px) {
+  .celebritiesOnSite {
+    max-width: 18ch;
+    font-size: 0.8rem;
+    padding: 0.6rem 0.6rem;
+    box-shadow: 0px 2px 6px black;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+  }
+  img {
+    margin-top: 3rem;
+  }
+  .box {
+    margin: 20px 2px 5px 2px;
+    padding: 0.5rem;
+    border-radius: 20px;
+  }
+  p {
+    font-size: 12px;
+  }
+  .website_button {
+    margin-bottom: 1rem;
+  }
+  .website_button a {
+    font-size: 1.2rem;
+    padding: 0.4rem 1rem;
+  }
+}
