--- a/categories.css
+++ b/categories.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-image: url(/img/categories.webp);
+  background-image: url(img/categories.webp);
   background-size: cover;
   background-repeat: no-repeat;
 }
